--- a/_config.yml
+++ b/_config.yml
@@ -3,19 +3,41 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-highlighter: pygments
+
+# The following defaults are set by GitHub, which you are free to override in your _config.yml file:
+
+#  github: [metadata]
+#  encoding: UTF-8
+#  kramdown:
+#    input: GFM
+#    hard_wrap: false
+#  future: true
+#  jailed: false
+#  theme: jekyll-theme-primer
+#  gfm_quirks: paragraph_end
+
+# GitHub Pages & Jekyll override the following settings in your _config.yml file, which you cannot change:
+
+# lsi: false
+# safe: true
+# source: [your repo's top level directory]
+# incremental: false
+# highlighter: rouge
+# gist:
+#   noscript: false
+# kramdown:
+#   math_engine: mathjax
+#   syntax_highlighter: rouge
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : JasonGN Blog
+tagline: Never stop learning
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Jason Hong
+  email : jason.hong@mail.com
+  github : JasonGN
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -25,9 +47,9 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : https://jasongn.github.io
 
-gems: ["jekyll-sitemap"]
+#gems: ["jekyll-sitemap"]
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -82,38 +104,38 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
-    disqus :
-      short_name : jekyllbootstrap
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook :
-      appid : 123
-      num_posts: 5
-      width: 580
-      colorscheme: light
-    duoshuo :
-      short_name : jekyllbootstrap
+    provider : custom
+    # disqus :
+    #   short_name : jasongn
+    # livefyre :
+    #   site_id : 123
+    # intensedebate :
+    #   account : 123abc
+    # facebook :
+    #   appid : 123
+    #   num_posts: 5
+    #   width: 580
+    #   colorscheme: light
+    # duoshuo :
+    #   short_name : jekyllbootstrap
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : google
-    gauges :
-        site_id : 'SITE ID'
-    google : 
-        tracking_id : 'UA-123-12'
-    getclicky :
-      site_id : 
-    mixpanel :
-        token : '_MIXPANEL_TOKEN_'
-    piwik :
-        baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
-        idsite : '1'                   # the id of the site on Piwik
+    provider : false
+    # gauges :
+    #     site_id : 'SITE ID'
+    # google : 
+    #     tracking_id : 'UA-123-12'
+    # getclicky :
+    #   site_id : 
+    # mixpanel :
+    #     token : '_MIXPANEL_TOKEN_'
+    # piwik :
+    #     baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
+    #     idsite : '1'                   # the id of the site on Piwik
 
   # Settings for sharing helper. 
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
